--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,29 @@ color: rgb(152, 152, 241);
   transform: scale(1.1);
   transition: all 0.5s;
 }
+
+.single-detail{
+  min-height: 85vh;
+  display: grid;
+  gap: 10px;
+  /* grid-template-columns: 1fr 1fr; */
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+
+}
+
+.left-view{
+  background: rgb(59, 52, 52);
+  border-radius: 20px;
+  margin: 50px;
+}
+.right-view{
+  padding-top: 20px;
+  background: rgb(29, 32, 29);
+  border-radius: 30px;
+  margin: 50px;
+}
+
+.right-view:hover ,.left-view:hover {
+  transform: scale(1.1);
+  transition: all 0.5s;
+}
